--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "php": "^7.1.3",
         "andrefigueira/blog-article-faker": "^1.0",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.7.*",
+        "kyslik/column-sortable": "^5.8",
+        "laravel/framework": "5.7.28",
         "laravel/socialite": "^3.2",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
